# printing_press

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-25-peephole-and-constant-dedup.md
docs/superpowers/specs/: 2026-03-24-copy-propagation-algebraic-simplification-design.md  2026-03-25-dominator-licm-inter-gvn-peephole-design.md  2026-03-25-peephole-and-constant-dedup-design.md
src/: lib.rs  main.rs
src/inklang/: ast.rs  chunk.rs  codegen.rs  constant_fold.rs  error.rs  grammar.rs  ir.rs  lexer.rs  liveness.rs  lowerer.rs  mod.rs  parser.rs  peephole.rs  serialize.rs  spill_insert.rs  token.rs
src/inklang/ssa/: block.rs  builder.rs  deconstructor.rs  function.rs  mod.rs  value.rs
src/inklang/ssa/passes/: constant_propagation.rs  dce.rs  gvn.rs
tests/: hang_debug.rs  round_trip.rs
