[package]
name = "printing_press"
version = "0.1.0"
edition = "2021"
description = "Standalone Rust compiler for Inklang scripting language"
license = "MIT"
repository = "https://github.com/inklang/printing_press"
keywords = ["compiler", "inklang", "scripting"]
categories = ["compiler", "development-tools"]

[lib]
name = "printing_press"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
